k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
  namespace: petshop-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
        - name: registration-service
          image: petshop-registration-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
