k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registration-ingress
  namespace: petshop-apps
spec:
  rules:
    - http:
        paths:
          - path: /api/clients
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 8080
          - path: /api/animals
            pathType: Prefix
            backend:
              service:
                name: registration-service
                port:
                  number: 8080
